--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-opentracing": "^0.1.1",
     "express-rate-limit": "^5.1.3",
     "express-request-id": "1.4.1",
+    "fs": "0.0.1-security",
     "helmet": "^3.23.1",
     "http-proxy-middleware": "^1.0.4",
     "jaeger-client": "^3.18.0",
