--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "node -r dotenv/config node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@kiva/protocol-common": "0.1.11",
+    "protocol-common": "0.1.15",
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.1.3",
     "@nestjs/platform-express": "^7.1.3",
