Circleci project setup (#23)
* Add .circleci/config.yml

* Fixes tests that were actually broken (does not fix tests that fail because of environment)

Signed-off-by: Matt Raffel <mattr@kiva.org>

* moves tests and creates a smoke test suite

Signed-off-by: Matt Raffel <mattr@kiva.org>

* changes workflow

Signed-off-by: Matt Raffel <mattr@kiva.org>

* removing stuff not needed at this time

Signed-off-by: Matt Raffel <mattr@kiva.org>

* more changes to config

Signed-off-by: Matt Raffel <mattr@kiva.org>

* changing orb to older version

Signed-off-by: Matt Raffel <mattr@kiva.org>

* fixing command

Signed-off-by: Matt Raffel <mattr@kiva.org>

* removing unneeded command

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adds docker image push (requires docker account in build settings, already done)

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adding orb

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adding orb

Signed-off-by: Matt Raffel <mattr@kiva.org>

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start:hmr": "node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
-    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand"
+    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand",
+    "smoke-test": "node -r dotenv/config node_modules/.bin/jest -t \"AppController\" && node -r dotenv/config node_modules/.bin/jest -t \"Smoke tests\""
   },
   "dependencies": {
     "protocol-common": "0.1.15",
