--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
             branches:
               ignore: /.*/
           update-description: true
-          dockerfile: Dockerfile.production
+          dockerfile: ./docker/Dockerfile.production
           image: kivaprotocol/aries-guardianship-agency
           tag: << pipeline.git.tag >>
 
