Adds in docker support so that we can start running tests (#25)
* adds in half of integration test steps for CI

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adds docker layer cache

Signed-off-by: Matt Raffel <mattr@kiva.org>

* separating out jobs

Signed-off-by: Matt Raffel <mattr@kiva.org>

* downgrades docker compose version

Signed-off-by: Matt Raffel <mattr@kiva.org>

* removing container name

Signed-off-by: Matt Raffel <mattr@kiva.org>

* additional docker compose corrections

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adding in last testing steps

Signed-off-by: Matt Raffel <mattr@kiva.org>

* changes startup

Signed-off-by: Matt Raffel <mattr@kiva.org>

* fixing server name

Signed-off-by: Matt Raffel <mattr@kiva.org>

* I understand why people make such comments as "why"

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adding back container name

Signed-off-by: Matt Raffel <mattr@kiva.org>

* turns on tests

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adding envs

Signed-off-by: Matt Raffel <mattr@kiva.org>

* moving env to nonsecrets storage

Signed-off-by: Matt Raffel <mattr@kiva.org>

* removing actual test running

Signed-off-by: Matt Raffel <mattr@kiva.org>

* deletes un needed file

Signed-off-by: Matt Raffel mattr@kiva.org

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,29 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run smoke-test
-      # TODO: spin up docker images so that the other tests will succeed
+
+  integration-test:
+    machine:
+      docker_layer_caching: true
+    steps:
+      - checkout
+      - run: docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.2
+      - run: cp dummy.env .env
+      - run: npm install nodemon --save-dev
+      - run: npm install
+      - run: docker-compose -f docker-compose.yml build
+      - run:
+          name: Start docker compose and wait for readiness
+          command: |
+            set -x
+            docker-compose -f docker-compose.yml up -d
+            sleep 150
+            docker-compose -f docker-compose.yml logs
+            docker exec -it guardianship-agency npm install
+      # - run: docker exec -it guardianship-agency npm run test
       - run:
           name: SKIPPING TESTS. Remaining integration tests have been ignored
           command: echo "Remaining integration tests have been ignored"
-
 
 workflows:
   build-and-test:
@@ -22,6 +40,9 @@ workflows:
           filters: # run for all branches AND tags
             tags:
               only: /.*/
+      - integration-test:
+         requires:
+           - build-and-test
       - docker/publish:
           requires:
             - build-and-test
