--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,17 +2,19 @@
 # Note ensure the following env params are set
 # WALLET_DB_HOST=wallets-db
 # NETWORK_NAME=agency-network
-version: '3.5'
+version: '3.2'
 
 networks:
+  default:
+    external:
+      name: agency-network
   agency-network:
-    name: agency-network
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        -
-          subnet: 10.0.0.0/24
+      driver: bridge
+      ipam:
+        driver: default
+        config:
+          -
+            subnet: 10.0.0.0/24
 
 services:
       # indy pool needs a static ip configured in the pool_transactions_genesis so need to start it first
