--- a/package.json
+++ b/package.json
@@ -22,51 +22,51 @@
     "smoke-test": "node -r dotenv/config node_modules/.bin/jest -t \"AppController\" && node -r dotenv/config node_modules/.bin/jest -t \"Smoke tests\""
   },
   "dependencies": {
-    "protocol-common": "0.1.15",
-    "@nestjs/common": "^7.1.3",
-    "@nestjs/core": "^7.1.3",
-    "@nestjs/platform-express": "^7.1.3",
-    "@nestjs/swagger": "^4.5.10",
-    "@types/dockerode": "^2.5.32",
+    "protocol-common": "0.1.16",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
+    "@nestjs/platform-express": "^7.4.2",
+    "@nestjs/swagger": "^4.5.12",
+    "@types/dockerode": "^2.5.34",
     "cache-manager": "^3.3.0",
-    "cache-manager-fs-hash": "0.0.9",
+    "cache-manager-fs-hash": "^0.0.9",
     "class-validator": "^0.12.2",
-    "cls-hooked": "4.2.2",
+    "cls-hooked": "^4.2.2",
     "crypto-js": "^4.0.0",
     "crypto-random-string": "^3.2.0",
-    "dd-trace": "^0.22.0",
-    "dockerode": "^3.2.0",
+    "dd-trace": "^0.24.0",
+    "dockerode": "^3.2.1",
     "dotenv": "^8.2.0",
     "express-jwt": "^6.0.0",
     "express-opentracing": "^0.1.1",
     "express-rate-limit": "^5.1.3",
-    "express-request-id": "1.4.1",
+    "express-request-id": "^1.4.1",
     "fs": "0.0.1-security",
-    "helmet": "^3.23.1",
-    "http-proxy-middleware": "^1.0.4",
+    "helmet": "^3.23.3",
+    "http-proxy-middleware": "^1.0.5",
     "jaeger-client": "^3.18.0",
-    "jwks-rsa": "^1.8.0",
+    "jwks-rsa": "^1.8.1",
     "opentracing": "^0.14.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.2",
     "swagger-ui-express": "^4.1.4",
-    "typescript": "^3.9.5",
-    "winston-loggly-bulk": "^3.1.0"
+    "typescript": "^3.9.7",
+    "winston-loggly-bulk": "^3.1.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.1.3",
-    "@types/jest": "^25.2.1",
-    "@types/supertest": "^2.0.9",
-    "kill-port": "^1.6.0",
-    "jest": "^25.4.0",
-    "nodemon": "^2.0.3",
-    "prettier": "^2.0.4",
+    "@nestjs/testing": "^7.4.2",
+    "@types/jest": "^25.2.3",
+    "@types/supertest": "^2.0.10",
+    "kill-port": "^1.6.1",
+    "jest": "^25.5.4",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^25.5.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "6.1.2"
+    "tslint": "^6.1.3"
   },
   "jest": {
     "globals": {
