--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -14,4 +14,6 @@ FROM node:carbon-alpine
 WORKDIR /www
 COPY --from=node_modules /tmp/node_modules ./node_modules
 COPY --from=dist /tmp/dist ./dist
+RUN adduser -S app
+USER app
 CMD ["node", "dist/main.js"]
