Pro 2209 - use our own custom wallets-db with image fix in index (#33)
Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     command: postgres
     env_file:
       - .env
+    volumes:
+      - ./resources/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - agency-network
     depends_on:
