--- a/dummy.env
+++ b/dummy.env
@@ -12,3 +12,5 @@ WALLET_DB_PASS=dbpass
 WALLET_DB_ADMIN_USER=postgres
 WALLET_DB_ADMIN_PASS=dbpass
 POSTGRES_PASSWORD=dbpass
+POSTGRES_USER=postgres
+POSTGRES_DB=wallets
