--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "smoke-test": "node -r dotenv/config node_modules/.bin/jest -t \"AppController\" && node -r dotenv/config node_modules/.bin/jest -t \"Smoke tests\""
   },
   "dependencies": {
-    "protocol-common": "0.1.16",
     "@nestjs/common": "^7.4.2",
     "@nestjs/core": "^7.4.2",
     "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/swagger": "^4.5.12",
+    "@nestjs/swagger": "^4.6.0",
     "@types/dockerode": "^2.5.34",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
     "crypto-js": "^4.0.0",
@@ -47,6 +47,7 @@
     "jaeger-client": "^3.18.0",
     "jwks-rsa": "^1.8.1",
     "opentracing": "^0.14.4",
+    "protocol-common": "0.1.16",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.2",
     "swagger-ui-express": "^4.1.4",
