--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,20 +1,11 @@
-# Docker compose to spin up agency + indy ledger + postgres wallets db within this repo
+# Docker compose for production/ci to spin up agency + indy ledger + postgres wallets db within this repo
 # Note ensure the following env params are set
 # WALLET_DB_HOST=wallets-db
-# NETWORK_NAME=agency-network
 version: '3.2'
 
 networks:
-  default:
-    external:
-      name: agency-network
   agency-network:
-      driver: bridge
-      ipam:
-        driver: default
-        config:
-          -
-            subnet: 10.0.0.0/24
+    external: true
 
 services:
       # indy pool needs a static ip configured in the pool_transactions_genesis so need to start it first
@@ -55,10 +46,9 @@ services:
   guardianship-agency:
     build:
       context: ./
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/Dockerfile.production
     env_file:
       - .env
-    command: npm run start:debug
     image: guardianship-agency
     container_name: guardianship-agency
     working_dir: /www
@@ -67,7 +57,6 @@ services:
     expose: 
       - "3010"
     volumes:
-      - ./:/www
       - //var/run/docker.sock:/var/run/docker.sock
     networks:
       - agency-network
