--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-# Docker compose to spin up agency + indy ledger + postgres wallets db within this repo
+# Docker compose for development, to spin up agency + indy ledger + postgres wallets db within this repo
 # Note ensure the following env params are set
 # WALLET_DB_HOST=wallets-db
-# NETWORK_NAME=agency-network
 version: '3.5'
 
 networks:
