docker: align service and repo names
Signed-off-by: Anthony Voutas <anthonyv@kiva.org>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -51,14 +51,14 @@ services:
       - indy-pool
     tty: true
 
-  guardianship-agency:
+  aries-guardianship-agency:
     build:
       context: ./
       dockerfile: docker/Dockerfile.production
     env_file:
       - .env
-    image: guardianship-agency
-    container_name: guardianship-agency
+    image: aries-guardianship-agency
+    container_name: aries-guardianship-agency
     working_dir: /www
     ports:
       - "3010:3010"
