--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,12 @@ jobs:
       - run:
           name: node npm setup
           command: |
-              npm install nodemon --save-dev
-              npm install
               nvm install v8.17.0
+              nvm use v8.17.0
               node -v
               nvm alias default v8.17.0
+              npm install nodemon --save-dev
+              npm install
       - run:
           name: setup docker environments
           command: |
