--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "fs": "0.0.1-security",
     "helmet": "^3.23.3",
     "http-proxy-middleware": "^1.0.5",
-    "isomorphic-ws": "^4.0.1",
     "jaeger-client": "^3.18.0",
     "jwks-rsa": "^1.8.1",
     "opentracing": "^0.14.4",
@@ -54,8 +53,7 @@
     "rxjs": "^6.6.2",
     "swagger-ui-express": "^4.1.4",
     "typescript": "^3.9.7",
-    "winston-loggly-bulk": "^3.1.1",
-    "ws": "^7.3.1"
+    "winston-loggly-bulk": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.2",
