Update internal and public urls (#51)
Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/dummy.env
+++ b/dummy.env
@@ -4,6 +4,7 @@
 # For Agency
 NODE_ENV=LOCAL
 AGENT_LOG_LENGTH=100
+PUBLIC_URL=http://aries-guardianship-agency:3010
 
 # For Wallet DB
 WALLET_DB_HOST=wallets-db
