--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,49 @@ jobs:
       - run:
           name: setup docker environments
           command: |
+            # note: this docker pull is also in docker-publish
             docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.4
       - run:
           name: Start docker compose and wait for readiness
+          command: |
+            docker network ls
+            docker-compose -f docker-compose.yml build
+            set -x
+            docker-compose -f docker-compose.yml up -d
+            sleep 20
+            docker-compose -f docker-compose.yml logs
+      - run:
+          name: Running integration tests
+          command: |
+            sleep 5
+            docker exec -ti aries-guardianship-agency sh -c "npm run test"
+
+  docker-publish:
+    machine:
+      docker_layer_caching: true
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: setup shell environment
+          command: |
+            cp dummy.env .env
+            echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
+      - run:
+          name: node npm setup
+          command: |
+            npm install nodemon --save-dev
+            npm install
+            nvm install v8.17.0
+            node -v
+            nvm alias default v8.17.0
+      - run:
+          name: setup docker environments
+          command: |
+            # note: this docker pull is also in integration-test
+            docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.4
+      - run:
+          name: Start production docker compose and wait for readiness
           command: |
             docker network ls
             docker-compose -f docker-compose.ci.yml build
@@ -43,10 +83,10 @@ jobs:
             sleep 20
             docker-compose -f docker-compose.ci.yml logs
       - run:
-          name: Running integration tests
+          name: Running sanity tests
           command: |
             sleep 5
-            npm run test
+            node -r dotenv/config node_modules/.bin/jest --runInBand --forceExit --t "Prod integration test"
 
 workflows:
   build-and-test:
