add notes to dummy.env (#61)
Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/dummy.env
+++ b/dummy.env
@@ -1,18 +1,22 @@
 # These are dummy values that can be used to get started quickly
 # Replace these with real values when deploying to a real environment
 
-# For Agency
+# Should match the deployed environment (eg DEV)
 NODE_ENV=LOCAL
+# TODO can be removed and moved to config once the latest protocol-common is in, for now set to 100
 AGENT_LOG_LENGTH=100
+# Should match the deployed environment's public url
 PUBLIC_URL=http://aries-guardianship-agency:3010
 
-# For Wallet DB
+# For postgres DB which hosts the wallets (should match old values from identity-wallet-service)
 WALLET_DB_HOST=wallets-db
 WALLET_DB_PORT=5432
 WALLET_DB_USER=postgres
 WALLET_DB_PASS=dbpass
 WALLET_DB_ADMIN_USER=postgres
 WALLET_DB_ADMIN_PASS=dbpass
+
+# These values are only used locally by docker-compose to set up the DB container - should match values above
 POSTGRES_PASSWORD=dbpass
 POSTGRES_USER=postgres
 POSTGRES_DB=wallets
