circleci: no aliases
Signed-off-by: Anthony Voutas <anthonyv@kiva.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,22 +32,13 @@ jobs:
             cp dummy.env .env
             echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
       - run:
-          name: node npm setup (1)
+          name: node npm setup
           command: |
               npm install nodemon --save-dev
-      - run:
-          name: node npm setup (2)
-          command: |
               npm install
-      - run:
-          name: node npm setup (3)
-          command: |
-              nvm install lts/erbium
-      - run:
-          name: node npm setup (4)
-          command: |
+              nvm install v12.18.4
               node -v
-              nvm alias default lts/erbium
+              nvm alias default v12.18.4
       - run:
           name: setup docker environments
           command: |
