Revert "Merge pull request #68 from kiva/upgrade-node"
This reverts commit f904f71758020b5c1984301e8ce5693999a5f55a, reversing
changes made to bd3ceb808817425494817fd433db890c5bda9f42.

Signed-off-by: Anthony Voutas <anthonyv@kiva.org>

--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -1,9 +1,9 @@
-FROM node:erbium-alpine as node_modules
+FROM node:carbon-alpine as node_modules
 WORKDIR /tmp/
 COPY package.json package-lock.json ./
 RUN npm install --production
 
-FROM node:erbium-alpine as dist
+FROM node:carbon-alpine as dist
 WORKDIR /tmp/
 COPY package.json package-lock.json tsconfig.json ./
 RUN npm install
@@ -11,7 +11,7 @@ COPY src/ src/
 COPY resources/ resources/
 RUN npm run build
 
-FROM node:erbium-alpine
+FROM node:carbon-alpine
 WORKDIR /www
 COPY --from=node_modules /tmp/node_modules ./node_modules
 COPY --from=dist /tmp/dist ./dist
