ensure production dockerfile is reachable
Signed-off-by: Anthony Voutas <anthonyv@kiva.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,16 +48,54 @@ jobs:
           name: Start docker compose and wait for readiness
           command: |
             docker network ls
+            docker-compose -f docker-compose.yml build
+            set -x
+            docker-compose -f docker-compose.yml up -d
+            sleep 20
+            docker-compose -f docker-compose.yml logs
+      - run:
+          name: Running integration tests
+          command: |
+            sleep 5
+            docker exec -ti aries-guardianship-agency sh -c "npm run test"
+
+  production-dockerfile-test:
+    machine:
+      docker_layer_caching: true
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: setup shell environment
+          command: |
+            cp dummy.env .env
+            echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
+      - run:
+          name: node npm setup
+          command: |
+              npm install nodemon --save-dev
+              npm install
+              nvm install v8.17.0
+              node -v
+              nvm alias default v8.17.0
+      - run:
+          name: setup docker environments
+          command: |
+            # note: this docker pull is also in docker-publish
+            docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.4
+      - run:
+          name: Start docker compose and wait for readiness
+          command: |
+            docker network ls
             docker-compose -f docker-compose.ci.yml build
             set -x
             docker-compose -f docker-compose.ci.yml up -d
             sleep 20
             docker-compose -f docker-compose.ci.yml logs
       - run:
-          name: Running integration tests
+          name: Is Agency Reachable?
           command: |
-            sleep 5
-            docker exec -ti aries-guardianship-agency sh -c "npm run test"
+            ./scripts/healthcheck.sh http://localhost:3010/healthz
 
 workflows:
   build-and-test:
@@ -67,11 +105,14 @@ workflows:
             tags:
               only: /.*/
       - integration-test:
-         requires:
-           - build-and-test
+          requires:
+            - build-and-test
+      - production-dockerfile-test:
+          requires
+            - integration-test:
       - docker/publish:
           requires:
-            - integration-test
+            - production-dockerfile-test 
           filters: # only run for semver tagged versions
             tags:
               only: /^([0-9]+)\.([0-9]+)\.([0-9]+)/
