--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ workflows:
             - build-and-test
       - production-dockerfile-test:
           requires
-            - integration-test:
+            - integration-test
       - docker/publish:
           requires:
             - production-dockerfile-test 
