--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,6 @@ jobs:
       - run:
           name: setup docker environments
           command: |
-            # note: this docker pull is also in docker-publish
             docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.4
       - run:
           name: Start docker compose and wait for readiness
@@ -81,7 +80,6 @@ jobs:
       - run:
           name: setup docker environments
           command: |
-            # note: this docker pull is also in docker-publish
             docker pull bcgovimages/aries-cloudagent:py36-1.15-0_0.5.4
       - run:
           name: Start docker compose and wait for readiness
@@ -98,7 +96,7 @@ jobs:
             ./scripts/healthcheck.sh http://localhost:3010/healthz
 
 workflows:
-  build-and-test:
+  build-test-deploy:
     jobs:
       - build-and-test:
           filters: # run for all branches AND tags
@@ -107,9 +105,15 @@ workflows:
       - integration-test:
           requires:
             - build-and-test
+          filters: # run for all branches AND tags
+            tags:
+              only: /.*/
       - production-dockerfile-test:
           requires:
             - integration-test
+          filters: # run for all branches AND tags
+            tags:
+              only: /.*/
       - docker/publish:
           requires:
             - production-dockerfile-test 
