updates to clean up read me, postgres fix for windows operation (#79)
* updates to clean up read me, postgres fix for windows operation

Signed-off-by: Matt Raffel <mattr@kiva.org>

* improving logging around exception case

Signed-off-by: Matt Raffel <mattr@kiva.org>

* PR changes

Signed-off-by: Matt Raffel <mattr@kiva.org>

* some additional clarification of README

Signed-off-by: Matt Raffel <mattr@kiva.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   wallets-db:
     image: postgres:11
     container_name: wallets-db
-    command: postgres
+    command: postgres -c listen_addresses='*'
     env_file:
       - .env
     volumes:
