Pro 2410 - Add redis support to agency (#90)
* Add redis support to agency

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* cleanup

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* set ttl to 0

Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,3 +74,12 @@ services:
       - indy-pool
     tty: true
     privileged: true # Need privileged to access docker.sock in latest Mac Docker
+
+  # Adding redis here for testing, not needed on docker-compose.ci.yml
+  redis:
+    image: redis
+    container_name: redis
+    networks:
+      - agency-network
+    depends_on:
+      - indy-pool
