--- a/dummy.env
+++ b/dummy.env
@@ -20,3 +20,8 @@ WALLET_DB_ADMIN_PASS=dbpass
 POSTGRES_PASSWORD=dbpass
 POSTGRES_USER=postgres
 POSTGRES_DB=wallets
+
+# We don't include the redis host in env.json because we don't want to expose it publicly
+REDIS_ENABLED=false
+REDIS_HOST=redis
+REDIS_PASS=
