--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/dockerode": "^2.5.34",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
