--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "start:hmr": "node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
-    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand",
-    "smoke-test": "node -r dotenv/config node_modules/.bin/jest -t \"AppController\" && node -r dotenv/config node_modules/.bin/jest -t \"Smoke tests\""
+    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.12.0",
@@ -28,6 +27,7 @@
     "@nestjs/platform-express": "^7.4.2",
     "@nestjs/swagger": "^4.6.0",
     "@types/dockerode": "^2.5.34",
+    "aries-controller": "^1.0.2",
     "cache-manager": "^3.3.0",
     "cache-manager-fs-hash": "^0.0.9",
     "cache-manager-redis-store": "^2.0.0",
