--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ networks:
         config:
           -
             subnet: 10.0.0.0/24
+    tails-server:
 
 services:
       # indy pool needs a static ip configured in the pool_transactions_genesis so need to start it first
@@ -74,6 +75,30 @@ services:
       - indy-pool
     tty: true
     privileged: true # Need privileged to access docker.sock in latest Mac Docker
+
+  tails-server:
+    image: kivaprotocol/tails-server:latest
+    ports:
+      - 6543:6543
+    networks:
+      - tails-server
+    env_file:
+      - ./resources/tails-local.env
+    environment:
+     - NODE_ENV=production
+     - MSYS_NO_PATHCONV=1
+     - DOCKERHOST=${APPLICATION_URL-$(docker run --rm --net=host eclipse/che-ip)}
+     - GENESIS_URL=${GENESIS_URL:-http://$DOCKERHOST:9000/genesis}
+     - STORAGE_PATH=tmp/tails-files
+     - LOG_LEVEL=${LOG_LEVEL:-INFO}
+     - TAILS_SERVER_URL=${TAILS_SERVER_URL:-http://$DOCKERHOST:6543}
+    command: >
+      tails-server
+        --host 0.0.0.0
+        --port 6543
+        --storage-path ${STORAGE_PATH}
+        --log-level ${LOG_LEVEL}
+
 
   # Adding redis here for testing, not needed on docker-compose.ci.yml
   redis:
