--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -72,3 +72,18 @@ services:
       - indy-pool
     tty: true
     privileged: true
+
+  tails-server:
+    image: kivaprotocol/tails-server:latest
+    ports:
+      - 6543:6543
+    networks:
+      - tails-server
+    env_file:
+      - ./.env
+    command: >
+      tails-server
+        --host 0.0.0.0
+        --port 6543
+        --storage-path ${STORAGE_PATH}
+        --log-level INFO
