--- a/dummy.env
+++ b/dummy.env
@@ -25,3 +25,13 @@ POSTGRES_DB=wallets
 REDIS_ENABLED=false
 REDIS_HOST=redis
 REDIS_PASS=
+
+
+# for tails server local use only
+
+MSYS_NO_PATHCONV=1
+DOCKERHOST=${APPLICATION_URL-$(docker run --rm --net=host eclipse/che-ip)}
+GENESIS_URL=${GENESIS_URL:-http://$DOCKERHOST:9000/genesis}
+STORAGE_PATH=${STORAGE_PATH:-/tmp/tails-files}
+LOG_LEVEL=${LOG_LEVEL:-INFO}
+TAILS_SERVER_URL=${TAILS_SERVER_URL:-http://$DOCKERHOST:6543}
