switches tails servers back to one agency network
Signed-off-by: Cam Parra <caeparra@gmail.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -78,7 +78,8 @@ services:
     ports:
       - 6543:6543
     networks:
-      - tails-server
+      agency-network:
+        ipv4_address: 10.0.0.3
     env_file:
       - ./.env
     command: >
