fixes depend on problems with indy pool
Signed-off-by: Cam Parra <caeparra@gmail.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -79,6 +79,8 @@ services:
       - 6543:6543
     networks:
       - agency-network
+    depends_on:
+      - indy-pool
     env_file:
       - ./.env
     command: >
