--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - 6543:6543
     networks:
       - agency-network
+    depends_on:
+      - indy-pool
     env_file:
       - ./.env
     command: >
