--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "agency",
   "version": "1.0.0",
-  "private": true,
   "description": "agency for Kiva Protocol",
-  "license": "none",
+  "license": "Apache-2.0",
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kiva/protocol.git"
@@ -21,55 +21,44 @@
     "test": "node -r dotenv/config node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@kubernetes/client-node": "^0.12.0",
-    "@nestjs/common": "^7.4.2",
-    "@nestjs/core": "^7.4.2",
-    "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/swagger": "^4.6.0",
-    "@types/dockerode": "^2.5.34",
-    "aries-controller": "^1.0.4",
-    "cache-manager": "^3.3.0",
+    "@kubernetes/client-node": "^0.13.0",
+    "@nestjs/common": "^7.5.5",
+    "@nestjs/core": "^7.5.5",
+    "@nestjs/platform-express": "^7.5.5",
+    "@nestjs/swagger": "^4.7.5",
+    "@types/dockerode": "^3.2.1",
+    "aries-controller": "1.0.10",
+    "cache-manager": "^3.4.0",
     "cache-manager-fs-hash": "^0.0.9",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
-    "crypto-js": "^4.0.0",
     "crypto-random-string": "^3.3.0",
-    "dd-trace": "^0.24.0",
     "dockerode": "^3.2.1",
-    "dotenv": "^8.2.0",
-    "express-jwt": "^6.0.0",
-    "express-opentracing": "^0.1.1",
-    "express-rate-limit": "^5.1.3",
+    "express-rate-limit": "^5.2.3",
     "express-request-id": "^1.4.1",
-    "fs": "0.0.1-security",
-    "helmet": "^3.23.3",
-    "http-proxy-middleware": "^1.0.5",
-    "isomorphic-ws": "^4.0.1",
-    "jaeger-client": "^3.18.0",
-    "jwks-rsa": "^1.8.1",
-    "opentracing": "^0.14.4",
-    "protocol-common": "^0.1.22",
+    "helmet": "^4.2.0",
+    "http-proxy-middleware": "^1.0.6",
+    "protocol-common": "^0.1.24",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.2",
-    "swagger-ui-express": "^4.1.4",
-    "typescript": "^3.9.7",
-    "winston-loggly-bulk": "^3.1.1",
-    "ws": "^7.3.1"
+    "rxjs": "^6.6.3",
+    "swagger-ui-express": "^4.1.5",
+    "typescript": "^4.1.2",
+    "ws": "^7.4.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.4.2",
-    "@types/jest": "^25.2.3",
+    "@nestjs/testing": "^7.5.5",
+    "@types/jest": "^26.0.18",
     "@types/supertest": "^2.0.10",
-    "kill-port": "^1.6.1",
-    "jest": "^25.5.4",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
+    "dotenv": "^8.2.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^25.5.1",
-    "ts-node": "^8.10.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.3"
   },
