Pro 2648 - update env vars (#103)
* simplify env vars

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* security update

Signed-off-by: Jacob Saur <jsaur@kiva.org>

Co-authored-by: Cam Parra <51462259+mac-arrap@users.noreply.github.com>

--- a/dummy.env
+++ b/dummy.env
@@ -28,10 +28,7 @@ REDIS_PASS=
 
 
 # for tails server local use only
-
-MSYS_NO_PATHCONV=1
-DOCKERHOST=${APPLICATION_URL-$(docker run --rm --net=host eclipse/che-ip)}
-GENESIS_URL=${GENESIS_URL:-http://$DOCKERHOST:9000/genesis}
-STORAGE_PATH=${STORAGE_PATH:-/tmp/tails-files}
-LOG_LEVEL=${LOG_LEVEL:-INFO}
-TAILS_SERVER_URL=${TAILS_SERVER_URL:-http://$DOCKERHOST:6543}
+GENESIS_URL=http://localhost:9000/genesis
+STORAGE_PATH=/tmp/tails-files
+LOG_LEVEL=INFO
+TAILS_SERVER_URL=http://localhost:6543
