--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -75,6 +75,7 @@ services:
 
   tails-server:
     image: kivaprotocol/tails-server:latest
+    container_name: tails-server
     ports:
       - 6543:6543
     networks:
@@ -82,10 +83,10 @@ services:
     depends_on:
       - indy-pool
     env_file:
-      - ./.env
+      - .env
     command: >
       tails-server
         --host 0.0.0.0
         --port 6543
-        --storage-path ${STORAGE_PATH}
+        --storage-path /tmp/tails-files
         --log-level INFO
