Add revocation test (#110)
* get base tests in

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* add revoke

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* try this

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* right tails server

Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/dummy.env
+++ b/dummy.env
@@ -31,4 +31,4 @@ REDIS_PASS=
 GENESIS_URL=http://localhost:9000/genesis
 STORAGE_PATH=/tmp/tails-files
 LOG_LEVEL=INFO
-TAILS_SERVER_URL=http://localhost:6543
+TAILS_URL=http://tails-server:6543
