--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,8 @@ services:
     volumes:
       - ./:/www
       - /var/run/docker.sock:/var/run/docker.sock
+      # For dev purposes this simulates npm-link, since symbolic links on the mac won't work in the docker container
+      # - ../aries-controller/dist:/www/node_modules/aries-controller
     networks:
       - agency-network
     depends_on:
