--- a/dummy.env
+++ b/dummy.env
@@ -7,6 +7,9 @@ NODE_ENV=LOCAL
 AGENT_LOG_LENGTH=100
 # Should match the deployed environment's public url
 PUBLIC_URL=http://aries-guardianship-agency:3010
+MULTITENANT_API_KEY=adminApiKey
+MULTITENANT_WALLET_KEY=multitenant_key
+MULTITENANT_JWT_SECRET=jwtSecret
 
 # For postgres DB which hosts the wallets (should match old values from identity-wallet-service)
 WALLET_DB_HOST=wallets-db
