--- a/dummy.env
+++ b/dummy.env
@@ -7,9 +7,6 @@ NODE_ENV=LOCAL
 AGENT_LOG_LENGTH=100
 # Should match the deployed environment's public url
 PUBLIC_URL=http://aries-guardianship-agency:3010
-MULTITENANT_API_KEY=adminApiKey
-MULTITENANT_WALLET_KEY=multitenant_key
-MULTITENANT_JWT_SECRET=jwtSecret
 
 # For postgres DB which hosts the wallets (should match old values from identity-wallet-service)
 WALLET_DB_HOST=wallets-db
@@ -29,9 +26,30 @@ REDIS_ENABLED=false
 REDIS_HOST=redis
 REDIS_PASS=
 
-
 # for tails server local use only
 GENESIS_URL=http://localhost:9000/genesis
 STORAGE_PATH=/tmp/tails-files
 LOG_LEVEL=INFO
 TAILS_URL=http://tails-server:6543
+
+# for multitenant aca-py
+ACAPY_OUTBOUND_TRANSPORT=http
+ACAPY_ADMIN=[0.0.0.0,3021]
+ACAPY_ENDPOINT=http://multitenant:3020
+ACAPY_WEBHOOK_URL=http://aries-guardianship-agency:3010/v1/controller/multitenant
+ACAPY_ADMIN_API_KEY=adminApiKey
+ACAPY_LABEL=multitenant
+ACAPY_WALLET_NAME=multitenant_name
+ACAPY_WALLET_KEY=multitenant_key
+ACAPY_WALLET_TYPE=indy
+ACAPY_WALLET_STORAGE_TYPE=postgres_storage
+ACAPY_WALLET_SEED=0000000000000000000000000000Any1
+ACAPY_WALLET_STORAGE_CONFIG={"url":"wallets-db:5432","wallet_scheme":"MultiWalletSingleTable"}
+ACAPY_WALLET_STORAGE_CREDS={"account":"postgres","password":"dbpass","admin_account":"postgres","admin_password":"dbpass"}
+ACAPY_GENESIS_FILE=/home/indy/resources/pool_transactions_genesis_local_dev
+ACAPY_WALLET_LOCAL_DID=true
+ACAPY_LOG_LEVEL=info
+ACAPY_AUTO_PROVISION=true
+ACAPY_MULTITENANT=true
+ACAPY_MULTITENANT_ADMIN=true
+ACAPY_MULTITENANT_JWT_SECRET=jwtSecret
