--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,12 @@ jobs:
       - run:
           name: run tests
           command: |
-            npm run test
+            if ! npm run test ; then
+              echo "Tests failed. Server logs:";
+              cd ..
+              docker-compose -f docker-compose.ci.yml logs;
+              exit 1;
+            fi
 
 workflows:
   build-test-deploy:
