--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/platform-express": "^7.6.14",
     "@nestjs/swagger": "^4.7.16",
     "@types/dockerode": "^3.2.2",
-    "aries-controller": "1.0.35",
+    "aries-controller": "^1.0.36",
     "cache-manager": "^3.4.1",
     "cache-manager-fs-hash": "^0.0.9",
     "cache-manager-redis-store": "^2.0.0",
@@ -39,7 +39,7 @@
     "express-request-id": "^1.4.1",
     "helmet": "^4.4.1",
     "http-proxy-middleware": "^1.0.6",
-    "protocol-common": "0.1.31",
+    "protocol-common": "^0.1.34",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
